--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ rand = "0.9.0-alpha.1"
 time = "0.3.36"
 futures = { version = "0.3.30", features = ["thread-pool"] }
 tokio = { version = "1", features = ["full"] }
+xxhash-rust = { version = "0.8.11", features = ["xxh3"] }
