--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,6 @@ bincode = "1.3"
 rand = "0.9.0-alpha.1"
 time = "0.3.36"
 futures = { version = "0.3.30", features = ["thread-pool"] }
-tokio = { version = "1", features = ["full"] }
 xxhash-rust = { version = "0.8.11", features = ["xxh3"] }
 static_assertions = "1.1.0"
 spin = "0.9"
@@ -21,3 +20,7 @@ env_logger = "0.11.5"
 ctor = "0.2.8"
 chrono = "0.4.38"
 async-trait = "0.1.81"
+thiserror = "1.0.63"
+
+[dev-dependencies]
+mockall = "0.13.0"
