--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ ctor = "0.2.8"
 chrono = "0.4.38"
 async-trait = "0.1.81"
 thiserror = "1.0.63"
+parking_lot = "0.12.3"
 
 [dev-dependencies]
 mockall = "0.13.0"
