--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,7 @@ log = "0.4"
 env_logger = "0.11.5"
 ctor = "0.2.8"
 chrono = "0.4.38"
-async-trait = "0.1.81"
 thiserror = "1.0.63"
 parking_lot = "0.12.3"
-
-[dev-dependencies]
+sqlparser = "0.50.0"
 mockall = "0.13.0"
