--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Thomas Korrison <ferrite.db@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
 bincode = "1.3"
 rand = "0.9.0-alpha.1"
 time = "0.3.36"
@@ -24,3 +24,4 @@ parking_lot = "0.12.3"
 sqlparser = "0.50.0"
 mockall = "0.13.0"
 bitflags = "2.6.0"
+serde_json = "1.0.127"
