--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,21 +8,21 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive", "rc"] }
 bincode = "1.3"
-rand = "0.9.0-alpha.1"
-time = "0.3.36"
-futures = { version = "0.3.30", features = ["thread-pool"] }
-xxhash-rust = { version = "0.8.11", features = ["xxh3"] }
-static_assertions = "1.1.0"
+rand = "0.9.0-alpha.2"
+time = "0.3"
+futures = { version = "0.3", features = ["thread-pool"] }
+xxhash-rust = { version = "0.8", features = ["xxh3"] }
+static_assertions = "1.1"
 spin = "0.9"
-crossbeam = "0.8.4"
+crossbeam = "0.8"
 log = "0.4"
-env_logger = "0.11.5"
-ctor = "0.2.8"
-chrono = "0.4.38"
-thiserror = "1.0.63"
-parking_lot = "0.12.3"
-sqlparser = "0.50.0"
-mockall = "0.13.0"
-bitflags = "2.6.0"
-serde_json = "1.0.127"
-tokio = "1.40.0"
+env_logger = "0.11"
+ctor = "0.2"
+chrono = "0.4"
+thiserror = "1.0"
+parking_lot = "0.12"
+sqlparser = "0.52"
+mockall = "0.13"
+bitflags = "2.6"
+serde_json = "1.0"
+anyhow = "1.0"
