--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,8 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive", "rc"] }
 bincode = "1.3"
 rand = "0.9.0-alpha.2"
-time = "0.3"
 futures = { version = "0.3", features = ["thread-pool"] }
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
-static_assertions = "1.1"
 spin = "0.9"
 crossbeam = "0.8"
 log = "0.4"
@@ -24,5 +22,6 @@ parking_lot = "0.12"
 sqlparser = "0.52"
 mockall = "0.13"
 bitflags = "2.6"
-serde_json = "1.0"
-anyhow = "1.0"
+clap = { version = "4.5.23", features = ["derive"] }
+rustyline = "15.0.0"
+colored = "2.1.0"
