--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ spin = "0.9"
 crossbeam = "0.8"
 log = "0.4"
 env_logger = "0.11"
-ctor = "0.2"
 chrono = "0.4"
 thiserror = "1.0"
 parking_lot = "0.12"
@@ -25,3 +24,4 @@ bitflags = "2.6"
 clap = { version = "4.5.23", features = ["derive"] }
 rustyline = "15.0.0"
 colored = "2.1.0"
+tempfile = "3.14.0"
