--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ clap = { version = "4.5.23", features = ["derive"] }
 rustyline = "15.0.0"
 colored = "2.1.0"
 tempfile = "3.14.0"
+tracing = "0.1.41"
