--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ prettytable-rs = "0.10.0"
 tempfile = "3.15.0"
 chrono = "0.4.39"
 crossbeam = "0.8.4"
-sqlparser = "0.53.0"
 rand = "0.9.0-beta.3"
 xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
 spin = "0.9.8"
@@ -23,3 +22,28 @@ colored = "3.0.0"
 rustyline = "15.0.0"
 thiserror = "2.0.11"
 mockall = "0.13.1"
+
+# Server dependencies
+tokio = { version = "1.0", features = ["full"] }
+serde_json = "1.0"
+toml = "0.7"
+
+# Network dependencies
+bytes = "1.0"
+tokio-util = { version = "0.7", features = ["codec"] }
+
+# SQL parsing
+sqlparser = "0.53"
+clap = { version = "4.5.26", features = ["derive"] }
+
+# Metrics
+#metrics = "0.21"
+#prometheus = "0.13"
+
+# Authentication
+#jsonwebtoken = "8.1"
+#argon2 = "0.5"
+
+# Logging and monitoring
+#tracing = "0.1"
+#tracing-subscriber = "0.3"
