--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ log = "0.4.25"
 parking_lot = "0.12.3"
 env_logger = "0.11.6"
 prettytable-rs = "0.10.0"
-tempfile = "3.15.0"
+
 chrono = "0.4.39"
 crossbeam = "0.8.4"
 rand = "0.9.0-beta.3"
@@ -21,7 +21,10 @@ bincode = "1.3.3"
 colored = "3.0.0"
 rustyline = "15.0.0"
 thiserror = "2.0.11"
+
+# Testing
 mockall = "0.13.1"
+tempfile = "3.15.0"
 
 # Server dependencies
 tokio = { version = "1.0", features = ["full"] }
@@ -36,7 +39,6 @@ tokio-util = { version = "0.7", features = ["codec"] }
 sqlparser = "0.53"
 clap = { version = "4.5.26", features = ["derive"] }
 crossbeam-channel = "0.5.14"
-mockall_double = "0.3.1"
 
 # Metrics
 #metrics = "0.21"
