--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ env_logger = "0.11.6"
 prettytable-rs = "0.10.0"
 
 chrono = "0.4.39"
+chrono-tz = "0.10.1"
 crossbeam = "0.8.4"
 rand = "0.9.0-beta.3"
 xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
@@ -39,6 +40,7 @@ tokio-util = { version = "0.7", features = ["codec"] }
 sqlparser = "0.53"
 clap = { version = "4.5.26", features = ["derive"] }
 crossbeam-channel = "0.5.14"
+regex = "1.11.1"
 
 # Metrics
 #metrics = "0.21"
