--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,26 +6,26 @@ authors = ["Thomas Korrison <ferrite.db@gmail.com>"]
 edition = "2021"
 
 [dependencies]
-log = "0.4.25"
-parking_lot = "0.12.3"
-env_logger = "0.11.6"
-prettytable-rs = "0.10.0"
+log = "0.4"
+parking_lot = "0.12"
+env_logger = "0.11"
+prettytable-rs = "0.10"
 
-chrono = "0.4.39"
-chrono-tz = "0.10.1"
-crossbeam = "0.8.4"
-rand = "0.9.0-beta.3"
-xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
-spin = "0.9.8"
-serde = { version = "1.0.217", features = ["derive"] }
-bincode = "1.3.3"
-colored = "3.0.0"
-rustyline = "15.0.0"
-thiserror = "2.0.11"
+chrono = "0.4"
+chrono-tz = "0.10"
+crossbeam = "0.8"
+rand = "0.9"
+xxhash-rust = { version = "0.8", features = ["xxh3"] }
+spin = "0.9"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
+colored = "3.0"
+rustyline = "15.0"
+thiserror = "2.0"
 
 # Testing
-mockall = "0.13.1"
-tempfile = "3.15.0"
+mockall = "0.13"
+tempfile = "3.19"
 
 # Server dependencies
 tokio = { version = "1.0", features = ["full"] }
@@ -33,14 +33,14 @@ serde_json = "1.0"
 toml = "0.7"
 
 # Network dependencies
-bytes = "1.0"
-tokio-util = { version = "0.7", features = ["codec"] }
+# bytes = "1.0"
+# tokio-util = { version = "0.7", features = ["codec"] }
 
 # SQL parsing
 sqlparser = "0.53"
-clap = { version = "4.5.26", features = ["derive"] }
-crossbeam-channel = "0.5.14"
-regex = "1.11.1"
+clap = { version = "4.5", features = ["derive"] }
+crossbeam-channel = "0.5"
+regex = "1.11"
 
 # Metrics
 #metrics = "0.21"
