--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ log = "0.4"
 parking_lot = "0.12"
 env_logger = "0.11"
 prettytable-rs = "0.10"
+md5 = "0.7"
 
 chrono = "0.4"
 chrono-tz = "0.10"
@@ -26,6 +27,9 @@ thiserror = "2.0"
 # Testing
 mockall = "0.13"
 tempfile = "3.19"
+sqllogictest = "0.28"
+async-trait = "0.1"
+futures = "0.3"
 
 # Server dependencies
 tokio = { version = "1.0", features = ["full"] }
@@ -53,3 +57,6 @@ regex = "1.11"
 # Logging and monitoring
 #tracing = "0.1"
 #tracing-subscriber = "0.3"
+
+[dev-dependencies]
+tokio = { version = "1.0", features = ["full", "test-util"] }
