Update dependencies and enhance logging system
Added the `hex` crate to `Cargo.toml` for improved hexadecimal encoding/decoding capabilities. Modified `test.log` to include additional log entries for better traceability. Refactored various components in the logging system to improve clarity and maintainability, ensuring better performance and thread safety.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ sqlparser = "0.53"
 clap = { version = "4.5", features = ["derive"] }
 crossbeam-channel = "0.5"
 regex = "1.11"
+hex = "0.4.3"
 
 # Metrics
 #metrics = "0.21"
