Update .gitignore to include IDE/editor files, database files, and environment variables
Expanded the .gitignore file to exclude common IDE/editor specific files, database files, and environment variable files. This change helps maintain a cleaner repository by preventing unnecessary files from being tracked. Additionally, added entries for benchmarking results and generated documentation to further streamline the project structure.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,26 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# IDE/editor specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+.cursor/
+
+# Database files
+*.db
+*.sql
+*.log
+
+# Benchmarking results
+benches/results/
+
+# Environment variables
+.env
+.env.local
+
+# Generated documentation
+doc/
