--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ tempfile = "3.20"
 sqllogictest = "0.28"
 
 # Server dependencies
-tokio = { version = "1.45", features = ["full"] }
+tokio = { version = "1.45", features = ["rt", "io-util", "net", "rt-multi-thread", "signal", "macros"] }
 serde_json = "1.0"
 toml = "0.8"
 
