--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ tempfile = "3.20"
 sqllogictest = "0.28"
 
 # Server dependencies
-tokio = { version = "1.45", features = ["rt", "io-util", "net", "rt-multi-thread", "signal", "macros"] }
+tokio = { version = "1.45", features = ["rt", "io-util", "net", "rt-multi-thread", "signal", "macros", "sync", "fs", "time"] }
 serde_json = "1.0"
 toml = "0.8"
 
@@ -41,8 +41,14 @@ toml = "0.8"
 sqlparser = "0.56"
 clap = { version = "4.5", features = ["derive"] }
 crossbeam-channel = "0.5"
+crossbeam-utils = "0.8"
 regex = "1.11"
 hex = "0.4"
+lz4 = "1.24"
+zstd = "0.13"
+rayon = "1.8"
+num_cpus = "1.16"
+futures = "0.3.31"
 
 # Metrics
 #metrics = "0.21"
