--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,10 @@ chrono = "0.4"
 chrono-tz = "0.10"
 rand = "0.9"
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
-spin = "0.10"
 serde = { version = "1.0", features = ["derive"] }
-bincode = "1.3"
+bincode = "2.0.1"
 colored = "3.0"
-rustyline = "15.0"
+rustyline = "16.0.0"
 thiserror = "2.0"
 
 # Testing
@@ -29,7 +28,7 @@ tempfile = "3.20"
 sqllogictest = "0.28"
 
 # Server dependencies
-tokio = { version = "1.45", features = ["rt", "io-util", "net", "rt-multi-thread", "signal", "macros", "sync", "fs", "time"] }
+tokio = { version = "1.45",  default-features = false, features = ["rt", "io-util", "net", "rt-multi-thread", "signal", "macros", "sync", "fs", "time"] }
 serde_json = "1.0"
 toml = "0.8"
 
@@ -41,12 +40,10 @@ toml = "0.8"
 sqlparser = "0.56"
 clap = { version = "4.5", features = ["derive"] }
 crossbeam-channel = "0.5"
-crossbeam-utils = "0.8"
 regex = "1.11"
 hex = "0.4"
 lz4 = "1.24"
 zstd = "0.13"
-rayon = "1.8"
 num_cpus = "1.16"
 futures = "0.3.31"
 
@@ -64,3 +61,22 @@ futures = "0.3.31"
 
 [dev-dependencies]
 tokio = { version = "1.45", features = ["full", "test-util"] }
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
+debug = false
+
+[profile.dev]
+opt-level = 0
+debug = true
+
+#[features]
+#default = ["server"]
+#cli = []
+#client = []
+#server = []
+
