--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,78 +6,152 @@ authors = ["Thomas Korrison <thomas_korrison@hotmail.com>"]
 edition = "2024"
 
 [dependencies]
+# Core runtime dependencies
 log = "0.4"
 parking_lot = "0.12"
 env_logger = "0.11"
 prettytable-rs = "0.10"
-md5 = "0.7"
+md5 = "0.8"
+thiserror = "2.0"
+libc = "0.2"
+mockall = { version = "0.13", optional = true }
 
+# Time and random utilities
 chrono = "0.4"
 chrono-tz = "0.10"
 rand = "0.9"
+
+# Serialization and hashing
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 serde = { version = "1.0", features = ["derive"] }
 bincode = "2.0"
-colored = "3.0"
-rustyline = "16.0.0"
-thiserror = "2.0"
-libc = "0.2"
-
-# Testing
-mockall = "0.13"
-tempfile = "3.20"
-sqllogictest = "0.28"
-
-# Server dependencies
-tokio = { version = "1.45",  default-features = false, features = ["rt", "io-util", "net", "rt-multi-thread", "signal", "macros", "sync", "fs", "time"] }
 serde_json = "1.0"
-toml = "0.8"
+toml = "0.9"
 
+# User interface
+colored = "3.0"
+rustyline = "17.0.0"
+clap = { version = "4.5", features = ["derive"] }
+
+# Async runtime and concurrency
+tokio = { version = "1.47", default-features = false, features = [
+    "rt", "io-util", "net", "rt-multi-thread", "signal", "macros", "sync", "fs", "time"
+] }
+crossbeam-channel = "0.5"
+futures = "0.3"
+
+# SQL parsing and processing
+sqlparser = "0.58"
+regex = "1.11"
+hex = "0.4"
+
+# System utilities
+num_cpus = "1.17"
+
+# Optional features (commented for now)
 # Network dependencies
 # bytes = "1.0"
 # tokio-util = { version = "0.7", features = ["codec"] }
 
-# SQL parsing
-sqlparser = "0.57"
-clap = { version = "4.5", features = ["derive"] }
-crossbeam-channel = "0.5"
-regex = "1.11"
-hex = "0.4"
-lz4 = "1.28"
-zstd = "0.13"
-num_cpus = "1.17"
-futures = "0.3"
-
-# Metrics
-#metrics = "0.21"
-#prometheus = "0.13"
+# Metrics and monitoring
+# metrics = "0.21"
+# prometheus = "0.13"
+# tracing = "0.1"
+# tracing-subscriber = "0.3"
 
 # Authentication
-#jsonwebtoken = "8.1"
-#argon2 = "0.5"
-
-# Logging and monitoring
-#tracing = "0.1"
-#tracing-subscriber = "0.3"
+# jsonwebtoken = "8.1"
+# argon2 = "0.5"
 
 [dev-dependencies]
-tokio = { version = "1.45", features = ["full", "test-util"] }
+# Enhanced tokio for testing
+tokio = { version = "1.47", features = ["full", "test-util"] }
 
-[profile.release]
-opt-level = 3
-lto = true
-codegen-units = 1
-panic = "abort"
-strip = true
-debug = false
+# Testing framework dependencies
+mockall = "0.13"
+tempfile = "3.20"
+sqllogictest = "0.28"
 
+# Benchmarking
+criterion = { version = "0.7", features = ["html_reports"] }
+
+# Benchmark targets
+[[bench]]
+name = "cache_benchmarks"
+harness = false
+
+[[bench]]
+name = "fifo_cache_benchmarking"
+harness = false
+
+[[bench]]
+name = "fifo_complexity_benchmarks"
+harness = false
+
+[[bench]]
+name = "time_complexity_demo"
+harness = false
+
+# Development profile - optimized for fast compilation and good debugging
 [profile.dev]
 opt-level = 0
 debug = true
+debug-assertions = true
+overflow-checks = true
+lto = false
+panic = "unwind"
+incremental = true
+codegen-units = 256
 
-#[features]
-#default = ["server"]
-#cli = []
-#client = []
-#server = []
+# Test profile - balanced for test execution speed vs debugging
+[profile.test]
+opt-level = 1
+debug = true
+debug-assertions = true
+overflow-checks = true
+lto = false
+panic = "unwind"
+incremental = true
+codegen-units = 256
+
+# Release profile - maximum performance for production database
+[profile.release]
+opt-level = 3
+debug = false
+debug-assertions = false
+overflow-checks = false
+lto = "fat"
+panic = "abort"
+codegen-units = 1
+strip = true
+
+# Benchmark profile - optimized for consistent performance measurement
+[profile.bench]
+opt-level = 3
+debug = false
+debug-assertions = false
+overflow-checks = false
+lto = "thin"
+panic = "abort"
+codegen-units = 1
+strip = true
+
+# Feature flags for different build configurations
+[features]
+default = []
+
+# CLI interface
+cli = []
+
+# Client library
+client = []
+
+# Server mode with network protocols
+server = []
+
+mocking = ["dep:mockall"]
+
+# Development and testing features
+dev = ["server", "mocking"]
+full = ["cli", "client", "server"]
 
