Introduce comprehensive integration test suite and reorganize `tests` directory
- Added integration tests for core components including planner, execution, catalog, buffer, recovery, and storage.
- Introduced `tests/common` for shared utilities, enhancing test configuration and logging setup.
- Expanded planner and execution tests with scenarios for query planning, basic select/filter operations, aggregations, and error handling.
- Improved test suite structure by modularizing tests under respective subdirectories (`planner`, `execution`, `recovery`, etc.).
- Updated `Cargo.toml` to include `test-tag` dependency.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ tokio = { version = "1.47", features = ["full", "test-util"] }
 mockall = "0.13"
 tempfile = "3.20"
 sqllogictest = "0.28"
+test-tag = "0.1"
 
 # Benchmarking
 criterion = { version = "0.7", features = ["html_reports"] }
