Update project metadata and enhance benchmarking capabilities
- Updated the project description in `Cargo.toml` to reflect the new name and focus on observability and NUMA-aware async execution.
- Added license, readme, repository URL, keywords, and categories to `Cargo.toml` for better project visibility.
- Refactored `README.md` to provide a clearer overview of the database's features and highlights.
- Introduced new benchmarking files to assess cache performance and time complexity, enhancing the testing framework.
- Added comprehensive documentation for benchmarking and performance tests to guide users in evaluating the database's capabilities.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
 name = "tkdb"
-description = "DBMS inspired by CMU 15-415/445 - Introduction to DBMS Course"
+description = "TokamakDB: a Rust OLTP database with NUMA-aware async execution and first-class observability"
 version = "0.1.0"
 authors = ["Thomas Korrison <thomas_korrison@hotmail.com>"]
 edition = "2024"
+license = "Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/tokamakdb/tokamakdb"
+keywords = ["database", "oltp", "rust", "concurrency", "numa"]
+categories = ["database-implementations", "asynchronous", "concurrency"]
 
 [dependencies]
 # Core runtime dependencies
