Enable Rust-specific pre-commit hooks for formatting, linting, compilation checks, println usage checks, and security auditing

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,34 +13,34 @@ repos:
       - id: mixed-line-ending
 
   # Rust-specific hooks
-#  - repo: local
-#    hooks:
+  - repo: local
+    hooks:
       # Format code with rustfmt
-#      - id: cargo-fmt
-#        name: cargo fmt
-#        description: Format Rust code with rustfmt
-#        entry: cargo fmt --all --
-#        language: system
-#        types: [rust]
-#        pass_filenames: false
+      - id: cargo-fmt
+        name: cargo fmt
+        description: Format Rust code with rustfmt
+        entry: cargo fmt --all --
+        language: system
+        types: [rust]
+        pass_filenames: false
 
       # Lint with clippy
-#      - id: cargo-clippy
-#        name: cargo clippy
-#        description: Lint Rust code with clippy
-#        entry: cargo clippy --all-targets --all-features -- -D warnings
-#        language: system
-#        types: [rust]
-#        pass_filenames: false
+      - id: cargo-clippy
+        name: cargo clippy
+        description: Lint Rust code with clippy
+        entry: cargo clippy --all-targets --all-features -- -D warnings
+        language: system
+        types: [rust]
+        pass_filenames: false
 
       # Check compilation
-#      - id: cargo-check
-#        name: cargo check
-#        description: Check that Rust code compiles
-#        entry: cargo check --all-targets --all-features
-#        language: system
-#        types: [rust]
-#        pass_filenames: false
+      - id: cargo-check
+        name: cargo check
+        description: Check that Rust code compiles
+        entry: cargo check --all-targets --all-features
+        language: system
+        types: [rust]
+        pass_filenames: false
 
       # Run unit tests (fast)
       # - id: cargo-test
@@ -51,40 +51,40 @@ repos:
       #   types: [rust]
       #   pass_filenames: false
 
-#      - id: check-println
-#        name: check for println usage
-#        description: Check for println! calls in main code
-#        entry: bash
-#        args:
-#          - -c
-#          - |
-#            if git diff --cached --name-only | grep -E "\.(rs)$" | grep -v test | grep -v bench | grep -v main.rs | grep -v cli.rs | xargs grep -l "println!" 2>/dev/null; then
-#              echo "Warning: Found println! calls in main code. Consider using log crate."
-#            fi
-#        language: system
-#        types: [rust]
-#        verbose: true
-#        pass_filenames: false
+      - id: check-println
+        name: check for println usage
+        description: Check for println! calls in main code
+        entry: bash
+        args:
+          - -c
+          - |
+            if git diff --cached --name-only | grep -E "\.(rs)$" | grep -v test | grep -v bench | grep -v main.rs | grep -v cli.rs | xargs grep -l "println!" 2>/dev/null; then
+              echo "Warning: Found println! calls in main code. Consider using log crate."
+            fi
+        language: system
+        types: [rust]
+        verbose: true
+        pass_filenames: false
 
   # Security audit (optional, can be slow)
-#  - repo: local
-#    hooks:
-#      - id: cargo-audit
-#        name: cargo audit
-#        description: Audit Rust dependencies for security vulnerabilities
-#        entry: bash
-#        args:
-#          - -c
-#          - |
-#            if command -v cargo-audit >/dev/null 2>&1; then
-#              cargo audit
-#            else
-#              echo "cargo-audit not installed, skipping security check"
-#            fi
-#        language: system
-#        types: [rust]
-#        pass_filenames: false
-#        stages: [push]  # Only run on push, not commit
+  - repo: local
+    hooks:
+      - id: cargo-audit
+        name: cargo audit
+        description: Audit Rust dependencies for security vulnerabilities
+        entry: bash
+        args:
+          - -c
+          - |
+            if command -v cargo-audit >/dev/null 2>&1; then
+              cargo audit
+            else
+              echo "cargo-audit not installed, skipping security check"
+            fi
+        language: system
+        types: [rust]
+        pass_filenames: false
+        stages: [push]  # Only run on push, not commit
 
 # Configuration for specific hooks
 ci:
