Implement HeldWriteLock for improved latch crabbing in B+ tree operations
- Introduced the `HeldWriteLock` struct to manage write locks more effectively during latch crabbing, ensuring locks are held for the entire lifetime of the struct.
- Updated `LatchContext` to utilize `HeldWriteLock` for holding write locks, enhancing thread safety and correctness in concurrent operations.
- Refactored methods to support the new locking mechanism, including `hold_write_lock` and `release_safe_ancestors`, ensuring proper management of held locks.
- Enhanced test cases to validate the behavior of the new locking structure and its integration within the latch crabbing protocol.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["database-implementations", "asynchronous", "concurrency"]
 [dependencies]
 # Core runtime dependencies
 log = "0.4"
-parking_lot = "0.12"
+parking_lot = { version = "0.12", features = ["arc_lock"] }
 env_logger = "0.11"
 prettytable-rs = "0.10"
 md5 = "0.8"
