--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,10 @@ bincode = "2.0"
 serde_json = "1.0"
 toml = "0.9"
 
+# Compression
+lz4_flex = "0.11"
+zstd = "0.13"
+
 # User interface
 colored = "3.0"
 rustyline = "17.0.0"
