Update license in Cargo.toml, add evidence demo for crash recovery, and enhance documentation
- Changed license specification in Cargo.toml to "MIT OR Apache-2.0".
- Introduced a new Makefile target for running a crash-recovery evidence demo.
- Added detailed documentation in README.md, EVIDENCE.md, NON_GOALS.md, and VISION.md to clarify project goals and evidence-based claims.
- Implemented a crash recovery evidence demo in examples/crash_recovery_evidence.rs and a corresponding script in scripts/crash_recovery_evidence.sh.
- Updated CI configuration to reflect branch naming changes from 'main' to 'master'.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,11 +79,11 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  # Benchmarks (only on main branch)
+  # Benchmarks (only on the master branch)
   bench:
     name: Benchmarks
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
