--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,12 +66,11 @@ jobs:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@nightly
-      - uses: Swatinem/rust-cache@v2
-      - name: Build
-        run: cargo build --verbose
       - name: Install Miri
-        run: cargo miri setup
+        run: |
+          rustup toolchain install nightly --component miri
+          rustup override set nightly
+          cargo miri setup
       - name: Test with Miri lru
         run: cargo miri test --package ferrite --lib storage::disk::async_disk::cache::lru --verbose
       - name: Test with Miri table_page
