--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/ferritedb/ferrite"
-keywords = ["database", "dbms", "rust", "sql", "storage-engine"]
+keywords = ["database", "dbms", "sql", "storage-engine", "oltp"]
 categories = ["database-implementations", "asynchronous", "concurrency"]
 
 [dependencies]
