--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ rand = "0.10"
 # Serialization and hashing
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 serde = { version = "1.0", features = ["derive"] }
-bincode = "2.0"
+postcard = { version = "1.0", features = ["alloc"] }
 serde_json = "1.0"
 toml = "1.0"
 
