chore: update dependencies and remove benchmarks
- Added `cachekit` version 0.3.0 to dependencies in `Cargo.toml`.
- Updated `clap` and `clap_builder` to version 4.5.59 in `Cargo.lock`.
- Removed benchmark files for `cache_benchmarks`, `fifo_cache_benchmarking`, and `fifo_complexity_benchmarks`.
- Updated `Cargo.lock` to reflect changes in dependencies and their versions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ md5 = "0.8"
 thiserror = "2.0"
 libc = "0.2"
 mockall = { version = "0.14", optional = true }
+cachekit = "0.3.0"
 
 # Time and random utilities
 chrono = "0.4"
@@ -84,18 +85,6 @@ sqllogictest = "0.29"
 criterion = { version = "0.8", features = ["html_reports"] }
 
 # Benchmark targets
-[[bench]]
-name = "cache_benchmarks"
-harness = false
-
-[[bench]]
-name = "fifo_cache_benchmarking"
-harness = false
-
-[[bench]]
-name = "fifo_complexity_benchmarks"
-harness = false
-
 [[bench]]
 name = "time_complexity_demo"
 harness = false
